--- a/src/vertxweb/src/main/resources/ws.html
+++ b/src/vertxweb/src/main/resources/ws.html
@@ -18,8 +18,11 @@
         }
 
         document.querySelector("#send").onclick = function() {
-            var text = document.querySelector("#input").value;
+            var input = document.querySelector('#input');
+            var text = input.value;
             socket.send(text);
+            input.value = '';
+            input.focus();
         }
     </script>
 </body>
